fixed a lot of things, broke a few more things

--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- CSS file -->
       <link rel="stylesheet" href="./assets/css/style.css">
-      <!-- google fonts -->
-      <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" 
-      rel="stylesheet"/>
-
         <title>Whack-a-Fly JavaScript Game</title>
 
   </head>
@@ -28,12 +24,22 @@
             <p class="score">0</p>
         </div>
     </div>
-    <div class="holes">
-        
-
+    <div class="holes"></div>
+  <div class="modal">
+    <div class="display">
+      <button>START THE GAME</button>
+      <h2>GAME OVER!</h2>
+      <h1>
+        HIGH SCORE :
+        <p class=""highscore">0</p>
+      </h1>
+    </div>
+  </div>
+     
+  
     </div>
 
-    <script src="./assets/js/whack-fly.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 
 
